Sat Aug 30 19:35:23 2014  fox

      57* .mk
          linux/monitor.c
          linux/proc.c
          linux/sigdesc.h
          makefile
          mk/common.mk
          mk/targets.mk
          Refresh the build to avoid cache username() issue.

Thu Oct 11 21:58:46 2012  fox

      56* monitor.c: Default to /var/tmp.

Tue Jul 10 20:20:31 2012  fox

      55* proc.c: Fix for RSS being out by *4.

Thu Jun 21 16:06:45 2012  fox

      54* makefile: Build 32 + 64 bit binaries. Hard code/internalise
          and remove dependency on ncurses.

Tue Oct 11 21:37:49 2011  fox

      53* monitor.c: Really fix the last-proc pctcpu calc so it works properly.
          More sillyness in thread vs proc sort/searching.

Mon Oct 10 23:22:20 2011  fox

      52* monitor.c: Fix stupid last-proc vs last-task sort/search which
          caused stupid %CPU for processes.

Sun Oct  9 10:25:14 2011  fox

      51* monitor.c: Better atomic updating.

Tue Sep 20 21:18:20 2011  fox

      50* monitor.c: Avoid pathological condition with procmon dying and us
          spinning the cpu.

Wed Sep 14 21:40:17 2011  fox

      49* proc.c, monitor.c: Better handling of corrupt/missing pmap files.

Sat Sep 10 22:36:43 2011  fox

      48* Add interrupts command, along with graphs.

Fri Sep  9 21:28:28 2011  fox

      47* proc.c: Fix EVENT field for 64-bit wchan

      46* proc.c: Make sure we turn off graph mode on ^C/quit.

Thu Sep  8 22:58:47 2011  fox

      45* protocol.c, graph.c: Display minigraphs as delta values.

Wed Sep  7 23:01:56 2011  fox

      44* Add: ip, icmp, udp, tcp - stats screens.

Sun Sep  4 17:48:44 2011  fox

      43* proc.c: Do binary search to find original pids, instead of linear.

      42* proc.c: Better handling of procmon terminating/restarting on us.

      41* monitor.c: Avoid reading /proc/pid/syscall if we are not root
          or its not our uid (performance).

Sat Sep  3 22:14:10 2011  fox

      40* proc.c, monitor.c: Add stale procmon detector.
